--- a/package.json
+++ b/package.json
@@ -2,13 +2,7 @@
   "name": "sass-watch",
   "main": "./lib/sass-watch",
   "version": "0.0.2",
-  "description": "A collection of snippets and tools for Jekyll",
-  "activationCommands": {
-    "atom-workspace": [
-      "sass-watch:watch",
-      "sass-watch:list"
-    ]
-  },
+  "description": "Watch a SASS file and compile to CSS",
   "repository": "https://github.com/arcath/sass-watch",
   "license": "MIT",
   "engines": {
@@ -19,6 +13,7 @@
     "node-sass": "^1.2.3",
     "space-pen": "^4",
     "atom-space-pen-views": "^0",
-    "underscore-plus": "1.x"
+    "underscore-plus": "1.x",
+    "season": "^4"
   }
 }
